# powersearch-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  fastmcp-http-auth.json  fastmcp-http.json  fastmcp.json  inspector.conf.json  powersearch-mcp.code-workspace  project-words.txt  pyproject.toml
.db/: eunomia_db.sqlite
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  docker.yml  gh-release.yml  publish-pypi.yml  publish.yml  push-checks.yml  release-drafter.yml  release.yml
docs/: auth.md  authentication.md  configuration.md  environment.md  summary-search.md
example-configs/: example.env  fastmcp.json  inspector.conf.json  mcp_policies.json  mcp_policies_jwt_scope.json  mcp_policies_oidc_role.json  searxng.yaml
scripts/: demo_client.py
src/powersearch_mcp/: __init__.py  __main__.py  _version.py  app.py  authorization_middleware.py  http_server.py  powersearch.py  settings.py  summarize.py
tests/: conftest.py  test_app.py  test_app_middleware.py  test_authorization_middleware.py  test_authorization_middleware_jwt_scopes.py  test_cli.py  test_pi.py  test_powersearch.py  test_settings.py  test_summarize.py
