[project]
name = "powersearch-mcp"
dynamic = ["version"]
description = "PowerSearch MCP helps AI agents search and retrieve content from the public web with fewer broken fetches, less boilerplate, and clean outputs ready to cite."
authors = [{ name = "The Objective Dad", email = "theobjectivedad@pm.me" }]
keywords = ["mcp", "search", "web", "retrieval", "agents", "scraping"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "camoufox[geoip]>=0.4.11,<1",
    "curl-cffi>=0.14.0,<1",
    "eunomia-mcp>=0.3.10",
    "fastmcp>=2.14,<3",
    "httpx[http2]>=0.28.1,<1",
    "mcp[cli]>=1.12.1,<2",
    "msgspec>=0.20.0,<1",
    "numpy>=2.4.0,<3",
    "py-key-value-aio[disk,memory,redis]>=0.3.0,<1",
    "pydantic-settings>=2.7.0,<3",
    "pydantic>=2.12.5,<3",
    "scrapling>=0.3.12,<1",
    "trafilatura>=2.0.0,<3",
    "truststore>=0.10.4,<1",
    "uvicorn>=0.40.0,<1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/theobjectivedad/powersearch-mcp"
Issues = "https://github.com/theobjectivedad/powersearch-mcp/issues"
Changelog = "https://github.com/theobjectivedad/powersearch-mcp/releases"


[build-system]
requires = ["hatchling>=1.22", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/powersearch_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/powersearch_mcp"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE", "CONTRIBUTING.md", "SECURITY.md"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-testmon>=2.0.14",
    "pytest-html>=4.1.1",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "pylint>=3.3.9",
]
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = []
check_untyped_defs = true
exclude = ["^tests/", "src/powersearch_mcp/_version.py"]
cache_dir = ".mypy_cache"
# Keep this off, doesn't play nice with pre commit hooks on changed files
# sqlite_cache = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
env_override_existing_values = 1
env_files = ".env"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

# Ruff configuration
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 80
target-version = "py313"
indent-width = 4
exclude = ["tests/**", "src/powersearch_mcp/_version.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PGH003", "D", "COM812", "TD", "EM101", "EM102", "TRY003", "E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.uv.sources]
powersearch_mcp = { workspace = true }
